--- a/PHCWebApplication/Web.config
+++ b/PHCWebApplication/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -11,7 +11,7 @@
   </configSections>
 
   <appSettings>
-    <add key="log4net.Internal.Debug" value="true"/>
+    <add key="log4net.Internal.Debug" value="true" />
 
   </appSettings>
   <log4net debug="true">
@@ -76,8 +76,8 @@
 
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=PHCSolutions;Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
-    <add name="PHCForms.Properties.Settings.PHCConnectionString" connectionString="Data Source=VARUN;Initial Catalog=PHC;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />
+    <add name="PHCForms.Properties.Settings.PHCConnectionString" connectionString="Data Source=VARUN;Initial Catalog=PHC;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="PHCSolutions" connectionString="metadata=res://*/PHCModel.csdl|res://*/PHCModel.ssdl|res://*/PHCModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=PHCSolutions;user id=sa;password=Pass1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
@@ -91,7 +91,7 @@
       </namespaces>
       <controls>
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
-      </controls>
+      <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" /></controls>
     </pages>
     <membership>
       <providers>
